--- a/pages/bouncing-ball.html
+++ b/pages/bouncing-ball.html
@@ -52,6 +52,12 @@
                 </div>
                 <div class="ball"></div>
             </div>
+            <div class="annotation">
+                <p><span>Click</span> and drag to rotate camera view</p>
+                <p><span>Shift + Click </span> and drag to pan</p>
+                <p><span>Scroll </span>mouse wheel to zoom in / out</p>
+                <p><span>Leave </span>frame to normalize view</p>
+            </div>
         </div>
     </main>
     <script src="../scripts/bouncing-ball.js"></script>
