Added annotation and proper thumbnail

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <section class="portfolio-item" onclick="location.href='./pages/bouncing-ball.html'">
                 <div class="portfolio-item-left">
-                    <img src="images/bouncing-ball.jpg" alt="bouncing-ball">
+                    <img src="images/bouncing-ball.png" alt="bouncing-ball">
                 </div>
                 <div class="portfolio-item-right">
                     <div class="portfolio-item-right-header">
@@ -53,6 +53,9 @@
                         <li>Shift + Click and drag to pan</li>
                         <li>Scroll mouse wheel to zoom in / out</li>
                         <li>Leave frame to normalize view</li>
+                        <li>CSS animated ball shadow</li>
+                        <li>Ball light source tracking</li>
+                        <li>No frameworks: pure JS + CSS</li>
                     </ul>
                     <p class="portfolio-item-right-footer">HTML / SCSS / Javascript</p>
                 </div>
