corrected description and GitHub links

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                                 <div class="github-popup-content">
                                     <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/bouncing-ball.html"
                                         onclick="event.stopPropagation()" target="_blank">bouncing-ball.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/scripts/bouncing-ball.js"
+                                        onclick="event.stopPropagation()" target="_blank">bouncing-ball.JS</a>
                                     <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/bouncing-ball.css"
                                         onclick="event.stopPropagation()" target="_blank">bouncing-ball.CSS</a>
                                     <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
@@ -49,12 +51,9 @@
                         </div>
                     </div>
                     <ul>
-                        <li>Click and drag to rotate camera view</li>
-                        <li>Shift + Click and drag to pan</li>
-                        <li>Scroll mouse wheel to zoom in / out</li>
-                        <li>Leave frame to normalize view</li>
-                        <li>CSS animated ball shadow</li>
-                        <li>Ball light source tracking</li>
+                        <li>Rotate, zoom and pan view operated with mouse </li>
+                        <li>CSS animated ball and its shadow</li>
+                        <li>Light source reflected on the ball</li>
                         <li>No frameworks: pure JS + CSS</li>
                     </ul>
                     <p class="portfolio-item-right-footer">HTML / SCSS / Javascript</p>
