added cart items counter

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>
             </section>
 
-            <section class="portfolio-item" onclick="location.href='./pages/e-shop.html'">
+            <section class="portfolio-item" onclick="window.open('./pages/e-shop.html')">
                 <div class="portfolio-item-left">
                     <img src="images/e-shop.png" alt="e-shop">
                 </div>
