--- a/pages/e-shop.html
+++ b/pages/e-shop.html
@@ -7,33 +7,32 @@
     <title>Snow-Shop on OOP</title>
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/e-shop.css">
+    <script src="https://kit.fontawesome.com/b031eaf582.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <div class="header-content">
             <div class="logo">SNOW-Shop</div>
-            <div class="cart">
+            <div class="header-right">
                 <div class="layover invisible"></div>
                 <form action="#" class="search-form">
                     <input type="text" class="search-field">
                     <button class="btn-search" type="submit">
-                        <i class="fas fa-search"></i>
+                        <i class="fas fa-search"></i>Search
                     </button>
                 </form>
-                <button class="btn-cart" type="button">Корзина</button>
-                <!-- <div class="cart-block invisible">
-                        <button class="btn-close">&times;</button>
-                        <div class="cart-empty invisible">Корзина пуста</div>
-                        <div class="cart-block-content"></div>
-                        <div class="cart-total"></div>
-                    </div> -->
+                <button class="btn-cart" data-counter="0" type="button">
+                    <i class="fa-solid fa-cart-shopping"></i>Cart</button>
             </div>
-            <div class="cart-block invisible">
-                <button class="btn-close">&times;</button>
-                <div class="cart-empty invisible">Корзина пуста</div>
-                <div class="cart-block-content"></div>
-                <div class="cart-total"></div>
+            <div class="cart">
+                <div class="cart-block invisible">
+                    <h2>Cart</h2>
+                    <button><i class="fa-solid fa-xmark btn-close"></i></button>
+                    <div class="cart-empty invisible">Cart is empty</div>
+                    <div class="cart-block-content"></div>
+                    <div class="cart-total"></div>
+                </div>
             </div>
         </div>
     </header>
@@ -43,9 +42,9 @@
         <!-- <div class="layover invisible"></div> -->
         <!-- </div> -->
     </main>
-    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
+    <!-- <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
         integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
     <script src="../scripts/e-shop.js"></script>
 </body>
 
