added search field features

--- a/pages/e-shop.html
+++ b/pages/e-shop.html
@@ -17,11 +17,16 @@
             <div class="header-right">
                 <div class="layover invisible"></div>
                 <form action="#" class="search-form">
-                    <input type="text" class="search-field">
+                    <div class="search-block">
+                        <input type="text" class="search-field" placeholder="Model name">
+                        <button class="search-clear invisible"><i class="fa-solid fa-circle-xmark"></i></button>
+                    </div>
+
                     <button class="btn-search" type="submit">
                         <i class="fas fa-search"></i>Search
                     </button>
                 </form>
+
                 <button class="btn-cart" data-counter="0" type="button">
                     <i class="fa-solid fa-cart-shopping"></i>Cart</button>
             </div>
