--- a/pages/e-shop.html
+++ b/pages/e-shop.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="logo">SNOW-Shop</div>
+            <div class="logo"></div>
             <div class="header-right">
                 <div class="layover invisible"></div>
                 <form action="#" class="search-form">
@@ -44,6 +44,7 @@
     <main>
         <!-- <div class="wrapper"> -->
         <div class="products"></div>
+        <div class="message invisible"></div>
         <!-- <div class="layover invisible"></div> -->
         <!-- </div> -->
     </main>
