--- a/index.html
+++ b/index.html
@@ -160,12 +160,14 @@
                         <div class="github-popup-opener" onclick="event.stopPropagation()">
                             <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
                                 <div class="github-popup-content">
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/vert-slider.html"
-                                        onclick="event.stopPropagation()" target="_blank">vert-slider.HTML</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/vert-slider.js"
-                                        onclick="event.stopPropagation()" target="_blank">vert-slider.JS</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/vert-slider.css"
-                                        onclick="event.stopPropagation()" target="_blank">vert-slider.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/e-shop.html"
+                                        onclick="event.stopPropagation()" target="_blank">e-shop.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/e-shop.js"
+                                        onclick="event.stopPropagation()" target="_blank">e-shop.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/JSON_for_E-shop/blob/master/db.json"
+                                        onclick="event.stopPropagation()" target="_blank">database.JSON</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/e-shop.css"
+                                        onclick="event.stopPropagation()" target="_blank">e-shop.CSS</a>
                                     <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
                                         onclick="event.stopPropagation()" target="_blank">main.CSS</a>
                                 </div>
@@ -173,9 +175,43 @@
                         </div>
                     </div>
                     <ul>
-                        <li>Click buttons, scroll mouse or press UP and DOWN keys</li>
+                        <li>Add / delete, change amount of products in cart</li>
+                        <li>Search by product's model name</li>
+                        <li>Adaptive layout</li>
+                        <li>JSON server with products array</li>
                     </ul>
-                    <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
+                    <p class="portfolio-item-right-footer">HTML / SCSS / Javascript / JSON</p>
+                </div>
+            </section>
+
+            <section class="portfolio-item" onclick="window.open('./pages/lime-brand.html')">
+                <div class="portfolio-item-left">
+                    <img src="images/lime-brand.png" alt="e-shop">
+                </div>
+                <div class="portfolio-item-right">
+                    <div class="portfolio-item-right-header">
+                        <h2>Frontpage animations for «Lime Brand»</h2>
+                        <div class="github-popup-opener" onclick="event.stopPropagation()">
+                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
+                                <div class="github-popup-content">
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/lime-brand.html"
+                                        onclick="event.stopPropagation()" target="_blank">lime-brand.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/lime-brand.js"
+                                        onclick="event.stopPropagation()" target="_blank">lime-brand.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/lime-brand.css"
+                                        onclick="event.stopPropagation()" target="_blank">lime-brand.CSS</a>
+                                    <!-- <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
+                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>Animated flip board</li>
+                        <li>Animated title letters</li>
+                        <li>Adaptive layout</li>
+                    </ul>
+                    <p class="portfolio-item-right-footer">HTML / SCSS / Javascript</p>
                 </div>
             </section>
 
@@ -203,67 +239,6 @@
                     </div>
                     <ul>
                         <li>Click buttons, scroll mouse or press UP and DOWN keys</li>
-                    </ul>
-                    <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
-                </div>
-            </section>
-
-            <section class="portfolio-item" onclick="location.href='./pages/drag-n-drop.html'">
-                <div class="portfolio-item-left">
-                    <img src="images/drag-n-drop.png" alt="drag-n-drop">
-                </div>
-                <div class="portfolio-item-right">
-                    <div class="portfolio-item-right-header">
-                        <h2>Drag-n-Drop sample</h2>
-                        <div class="github-popup-opener" onclick="event.stopPropagation()">
-                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
-                                <div class="github-popup-content">
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/drag-n-drop.html"
-                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.HTML</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/drag-n-drop.js"
-                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.JS</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/drag-n-drop.css"
-                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.CSS</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
-                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <ul>
-                        <li>Drag item to another columns</li>
-                        <li>Target area is highlighting when hovered</li>
-                    </ul>
-                    <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
-                </div>
-            </section>
-
-            <section class="portfolio-item" onclick="location.href='./pages/task-board.html'">
-                <div class="portfolio-item-left">
-                    <img src="images/task-board.png" alt="task-board">
-                </div>
-                <div class="portfolio-item-right">
-                    <div class="portfolio-item-right-header">
-                        <h2>Task Board</h2>
-                        <div class="github-popup-opener" onclick="event.stopPropagation()">
-                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
-                                <div class="github-popup-content">
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/task-board.html"
-                                        onclick="event.stopPropagation()" target="_blank">task-board.HTML</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/task-board.js"
-                                        onclick="event.stopPropagation()" target="_blank">task-board.JS</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/task-board.css"
-                                        onclick="event.stopPropagation()" target="_blank">task-board.CSS</a>
-                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
-                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <ul>
-                        <li>Drag tasks from one board to another</li>
-                        <li>Add new tasks or even new boards</li>
-                        <li>Delete tasks and boards</li>
                     </ul>
                     <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
                 </div>
@@ -331,7 +306,38 @@
                 </div>
             </section>
 
-            <section class="portfolio-item" onclick="location.href='./pages/cube.html'">
+            <section class="portfolio-item" onclick="location.href='./pages/task-board.html'">
+                <div class="portfolio-item-left">
+                    <img src="images/task-board.png" alt="task-board">
+                </div>
+                <div class="portfolio-item-right">
+                    <div class="portfolio-item-right-header">
+                        <h2>Task Board</h2>
+                        <div class="github-popup-opener" onclick="event.stopPropagation()">
+                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
+                                <div class="github-popup-content">
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/task-board.html"
+                                        onclick="event.stopPropagation()" target="_blank">task-board.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/task-board.js"
+                                        onclick="event.stopPropagation()" target="_blank">task-board.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/task-board.css"
+                                        onclick="event.stopPropagation()" target="_blank">task-board.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
+                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>Drag tasks from one board to another</li>
+                        <li>Add new tasks or even new boards</li>
+                        <li>Delete tasks and boards</li>
+                    </ul>
+                    <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
+                </div>
+            </section>
+
+            <!-- <section class="portfolio-item" onclick="location.href='./pages/cube.html'">
                 <div class="portfolio-item-left">
                     <img src="images/cube.jpg" alt="cube">
                 </div>
@@ -360,8 +366,37 @@
                     </ul>
                     <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
                 </div>
-            </section>
+            </section> -->
 
+            <!-- <section class="portfolio-item" onclick="location.href='./pages/drag-n-drop.html'">
+                <div class="portfolio-item-left">
+                    <img src="images/drag-n-drop.png" alt="drag-n-drop">
+                </div>
+                <div class="portfolio-item-right">
+                    <div class="portfolio-item-right-header">
+                        <h2>Drag-n-Drop sample</h2>
+                        <div class="github-popup-opener" onclick="event.stopPropagation()">
+                            <div class="git-title">GitHub <i class="fas fa-angle-down"></i>
+                                <div class="github-popup-content">
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/pages/drag-n-drop.html"
+                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.HTML</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/tree/master/scripts/drag-n-drop.js"
+                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.JS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/drag-n-drop.css"
+                                        onclick="event.stopPropagation()" target="_blank">drag-n-drop.CSS</a>
+                                    <a href="https://github.com/MaxLebedinsky/Portfolio/blob/master/styles/main.css"
+                                        onclick="event.stopPropagation()" target="_blank">main.CSS</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>Drag item to another columns</li>
+                        <li>Target area is highlighting when hovered</li>
+                    </ul>
+                    <p class="portfolio-item-right-footer">HTML / CSS / Javascript</p>
+                </div>
+            </section> -->
         </div>
     </main>
 </body>
